hello-deployment1.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello1-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    name: hello1
