hello-deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello2
spec:
  replicas: 1
  selector:
    matchLabels:
      name: hello2
  template:
    metadata:
      labels:
        name: hello2
    spec:
      containers:
        - name: hello2
          image: ghosttrio/k8s-helloworld
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello2-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    name: hello2
