hello-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello1-service
                port:
                  number: 80
          - path: /hello2
            pathType: Prefix
            backend:
              service:
                name: hello2-service
                port:
                  number: 80
