hello-ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /hello2
            pathType: Prefix
            backend:
              service:
                name: hello2-service
                port:
                  number: 80
